seat selection part done

--- a/index.html
+++ b/index.html
@@ -289,15 +289,15 @@
   </p>
 </div>
 
-<div class=" flex items-center gap-2 border-y-2 py-2 my-2 border-dashed text-lg font-semibold justify-between">
+<div id="show-coupon-price" class=" flex items-center gap-2 border-y-2 py-2 my-2 border-dashed text-lg font-semibold justify-between">
  <input id="coupon-filed" type="text" disabled class="input my-5 w-full input-primary border-primary" placeholder="have a coupon?">
  <button id="coupon-btn" class="btn bg-primary" disabled>Apply</button> 
 </div>
 <div class="text-lg font-semibold flex justify-between"></div>
-  <p>Grand Praice</p>
+  <p class="text-1xl font-semibold">Grand Praice</p>
   <p>
-    <span>BDT:</span>
-    <span>****</span>
+    <span class="font-semibold">BDT:</span>
+    <span id="grand-total">****</span>
   </p>
 </div>
 
@@ -318,7 +318,7 @@
         <div class="label">
           <span class="label-text font-semibold text-base">Phone Number*</span>
         </div>
-        <input type="text" placeholder="Enter your phone number" class="input input-bordered w-full" />
+        <input id="phone-number" type="text" placeholder="Enter your phone number" class="input input-bordered w-full" />
         
       </label>
 
@@ -332,7 +332,7 @@
         <input type="text" placeholder="Enter your email id" class="input input-bordered w-full" />
         
       </label>
-<button onclick="my_modal_1. showModal()" class="btn bg-primary mt-5 text-lg text-white w-full">NEXT</button>
+<button id="next-btn" disabled onclick="my_modal_1. showModal()" class="btn bg-primary mt-5 text-lg text-white w-full">NEXT</button>
 
 
 <!-- Open the modal using ID.showModal() method -->
@@ -348,7 +348,7 @@
     <div class="modal-action">
       <form method="dialog">
         <!-- if there is a button in form, it will close the modal -->
-        <button class="btn bg-[#27ae60] text-white py-4 px-8 hover:bg-black transition duration-200 ease-out">Continue</button>
+        <button id="btn-continue" class="btn bg-[#27ae60] text-white py-4 px-8 hover:bg-black transition duration-200 ease-out">Continue</button>
       </form>
     </div>
   </div>
